Fix counter not aligned in Dashboard - closes #3665

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -929,6 +929,7 @@ a h4 {
     padding-right: 20px;
     margin: 0;
     display: block;
+    overflow: hidden;
 }
 .dash-card .waiting-since {
     color: #93a1af;
